# Exceptio

./: CMakeLists.txt  README.md
example/: assert_example.cpp  exceptio_example.cpp  main.cpp
include/: assert.hpp  exceptio.hpp  my_assert.hpp
include/TIA_exceptio/: exceptio.hpp  my_assert.hpp
include/TIA_exceptio/src_exceptio/: main_class.cpp
include/src_exceptio/: main_class.cpp
src/: assert.cpp  assert.hpp  assert_3rd.cpp  assert_3rd.hpp  exceptio.cpp  exceptio.hpp
